feat: Add OAuth2Client configuration

--- a/client/src/main/resources/application.yml
+++ b/client/src/main/resources/application.yml
@@ -1,21 +1,23 @@
-spring:
-  security:
-    oauth2:
-      client:
-        registration: ## Client Setting
-          keycloak:
-            authorization-grant-type: authorization_code
-            client-id: oauth2-client-app
-            client-name: oauth2-client-app
-            client-secret: fdacDn3pRW7ImDBOfDQZERbjrBVUiZcW
-            redirect-uri: http://localhost:8081
-            clientAuthenticationMethod: client_secret_post
-            scope: openid,email
-        provider: ## Provider Setting
-          keycloak:
-            authorization-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/auth
-            issuer-uri: http://localhost:8080/realms/oauth2
-            jwk-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
-            token-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/token
-            user-info-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/userinfo
-            user-name-attribute: preferred_username
+server:
+  port: 8081
+#spring:
+#  security:
+#    oauth2:
+#      client:
+#        registration: ## Client Setting
+#          keycloak:
+#            authorization-grant-type: authorization_code
+#            client-id: oauth2-client-app
+#            client-name: oauth2-client-app
+#            client-secret: fdacDn3pRW7ImDBOfDQZERbjrBVUiZcW
+#            redirect-uri: http://localhost:8081/login/oauth2/code/keycloak
+#            clientAuthenticationMethod: client_secret_post
+#            scope: openid,email
+#        provider: ## Provider Setting
+#          keycloak:
+#            authorization-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/auth
+#            issuer-uri: http://localhost:8080/realms/oauth2
+#            jwk-set-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/certs
+#            token-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/token
+#            user-info-uri: http://localhost:8080/realms/oauth2/protocol/openid-connect/userinfo
+#            user-name-attribute: preferred_username
